k8s/service-pulse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forge-pulse
  labels:
    project: signalforge
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
